expected/main/gens/primBitFromLiteral-basic.err
ERROR: "actual/main/gens/primBitFromLiteral-basic.lc", line 3
external invalid1 {primBitFromLiteral 12}      :: Unit -> Bit 12 -- too few parameters
         ^
Generator primBitFromLiteral requires 2 arguments

ERROR: "actual/main/gens/primBitFromLiteral-basic.lc", line 4
external invalid2 {primBitFromLiteral Flag 16} :: Unit -> Bit 16 -- first param not nat
         ^
Generator argument 1 (Flag) does not have expected kind (nat)

ERROR: "actual/main/gens/primBitFromLiteral-basic.lc", line 5
external invalid3 {primBitFromLiteral 16 Word} :: Unit -> Bit 16 -- second param not nat
         ^
Generator argument 2 (Word) does not have expected kind (nat)

ERROR: "actual/main/gens/primBitFromLiteral-basic.lc", line 1
entrypoint invalid1, invalid2, invalid3
^
"invalid1" is not in scope

ERROR: "actual/main/gens/primBitFromLiteral-basic.lc", line 1
entrypoint invalid1, invalid2, invalid3
^
"invalid2" is not in scope

ERROR: "actual/main/gens/primBitFromLiteral-basic.lc", line 1
entrypoint invalid1, invalid2, invalid3
^
"invalid3" is not in scope

ERROR: Aborting after 6 previously reported errors

